fix: semantic errors

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <main class="main">
         <div class="my-info">
-            <h1 class="full-name">PAVEL&nbsp&nbsp<span>POPOV</span></h1>
+            <h1 class="full-name">PAVEL<span>POPOV</span></h1>
             <div class="profession">
                 <span>Junior Front-End Developer</span>
             </div>
