--- a/index.html
+++ b/index.html
@@ -9,35 +9,41 @@
 </head>
 <body>
     <aside class="aside">
-            <div class="my-photo">
+            <figure class="my-photo">
                 <img class="my-photo__photo" src="images/Pavel_photo2.jpg" alt="Pavel Popov photo">
-            </div>
-           <div class="contacts">
-                <div class="contacts__info-block">
+            </figure>
+            <ul class="contacts">
+
+                <li class="contacts__info-block">
                     <img class="contacts__icon" src="images/icon/mail.png" alt="mail icon">
                     <div class="contacts__text">
                         <span>inkvitop@gmail.com</span>
                     </div>
-                </div>
-                <div class="contacts__info-block">
+                </li>
+
+                <li class="contacts__info-block">
                     <img class="contacts__icon" src="images/icon/mobile.png" alt="telephone icon">
                     <div class="contacts__text">
                         <a href="tel:+375298520337">+375(29) 852-03-37</a>
                     </div>
-                </div>
-                <div class="contacts__info-block">
+                </li>
+
+                <li class="contacts__info-block">
                     <img class="contacts__icon" src="images/icon/flag.png" alt="location icon">
                     <div class="contacts__text">
                         <span>12-10-1988, Belasrus</span>
                     </div>
-                </div>
-                <div class="contacts__info-block">
+                </li>
+
+                <li class="contacts__info-block">
                     <img class="contacts__icon" src="images/icon/LinkedIn.png" alt="LinkedIn icon">
                     <div class="contacts__text">
                         <a href="https://www.linkedin.com/in/pavelpopovs/" target="_blank">LinledIn</a>
                     </div>
-                </div>
-           </div>
+                </li>
+
+            </ul>
+
         <article class="article">
             <h2 class="title__h2">PROFILE</h2>
             <div class="article__text">
@@ -51,8 +57,8 @@
         </article>
         <article class="article">
             <h2 class="title__h2">SKILLS</h2>
-            <div class="skills">
-                <div class="skills__block">
+            <ul class="skills">
+                <li class="skills__block">
                     <div class="block__name">
                         <span>Graphics</span>
                     </div>
@@ -63,8 +69,9 @@
                         <div class="parametr__skill-point_pos skill-points"></div>
                         <div class="parametr__skill-point_neg skill-points"></div>
                     </div>
-                </div>
-                <div class="skills__block">
+                </li>
+
+                <li class="skills__block">
                     <div class="block__name">
                         <span>HTML, CSS</span>
                     </div>
@@ -75,8 +82,9 @@
                         <div class="parametr__skill-point_pos skill-points"></div>
                         <div class="parametr__skill-point_neg skill-points"></div>
                     </div>
-                </div>
-                <div class="skills__block">
+                </li>
+
+                <li class="skills__block">
                     <div class="block__name">
                         <span>JavaScript</span>
                     </div>
@@ -87,8 +95,9 @@
                         <div class="parametr__skill-point_neg skill-points"></div>
                         <div class="parametr__skill-point_neg skill-points"></div>
                     </div>
-                </div>
-                <div class="skills__block">
+                </li>
+
+                <li class="skills__block">
                     <div class="block__name">
                         <span>Frameworks, Preprocessor</span>
                     </div>
@@ -99,8 +108,9 @@
                         <div class="parametr__skill-point_neg skill-points"></div>
                         <div class="parametr__skill-point_neg skill-points"></div>
                     </div>
-                </div>
-                <div class="skills__block">
+                </li>
+
+                <li class="skills__block">
                     <div class="block__name">
                         <span>Sound Recording</span>
                     </div>
@@ -111,8 +121,9 @@
                         <div class="parametr__skill-point_pos skill-points"></div>
                         <div class="parametr__skill-point_pos skill-points"></div>
                     </div>
-                </div>
-            </div>
+                </li>
+
+            </ul>
         </article>
         <article class="article">
             <h2 class="title__h2">INTERESTS</h2>
@@ -124,7 +135,7 @@
 
     <main class="main">
         <div class="my-info">
-            <h1 class="full-name">PAVEL<span>POPOV</span></h1>
+            <h1 class="full-name">PAVEL   <mark>POPOV</mark></h1>
             <div class="profession">
                 <span>Junior Front-End Developer</span>
             </div>
@@ -150,7 +161,7 @@
             <h2 class="title__h2">EDUCATION</h2>
             <div class="article__text">
                 <div>
-                    <h3 class="article__text__h3">RS School</h3>
+                    <h3 class="article__text__h3">EPAM UpSkill Lab</h3>
                     <p>2020 - present 
                         <br> Specialty Junior Front-End Developer</p>
                 </div> 
@@ -165,46 +176,69 @@
         </article>
 
 
+        <article class="article">
+            <h2 class="title__h2">CODE EXAMPLE</h2>
+            <div class="code-wrapper">
+                <pre class="code-wrapper-text">
+function solution(number){
+    let summ = 0;
+    if(number <= 0){
+        return 0;
+    }
+    for(let i = 0; i <= number - 1; ++i){
+        if(i % 3 == 0){
+        summ = summ + i;
+        }else if(i % 5 == 0){
+        summ = summ + i;
+        }
+    }
+    return summ;
+}
+                </pre>
+            </div>
+        </article>
+
         <div class="bottom">
             <article class="article article__language">
                 <h2 class="title__h2">LANGUAGES</h2>
-                <div class="article__text">
-                    <div class="article__text-block">
+                <ul class="article__text-ul">
+                    <li class="article__text-block">
                         <div class="block-language">Russian</div>
                         <div class="block-level">Native</div>
-                    </div>      
-                    <div class="article__text-block">
+                    </li>
+                    <li class="article__text-block">
                         <div class="block-language">Belarusian</div>
-                        <div class="block-level">Good</div>
-                    </div> 
-                    <div class="article__text-block">
+                        <div class="block-level">B2</div>
+                    </li>
+                    <li class="article__text-block">
                         <div class="block-language">English</div>
-                        <div class="block-level">Beginner</div>
-                    </div>                  
-                </div>
+                        <div class="block-level">A1+</div>
+                    </li>
+                </ul>
             </article>
             <article class="article article__computer">
                 <h2 class="title__h2">COMPUTER</h2>
-                <div class="article__text">
-                    <div class="article__text-block">
+                <ul class="article__text-ul">
+                    <li class="article__text-block">
                         <div class="block-programm">Photoshop</div>
                         <div class="block-level">Advanced</div>
-                    </div>
-                    <div class="article__text-block">
+                    </li>
+                    <li class="article__text-block">
                         <div class="block-programm">PremierePro</div>
                         <div class="block-level">Advanced</div>
-                    </div>
-                    <div class="article__text-block">
+                    </li>
+                    <li class="article__text-block">
                         <div class="block-programm">Nuendo</div>
                         <div class="block-level">Advanced</div>
-                    </div>
-                    <div class="article__text-block">
+                    </li>
+                    <li class="article__text-block">
                         <div class="block-programm">VSCode</div>
                         <div class="block-level">intermidiate</div>
-                    </div> 
-                </div>
+                    </li>
+                </ul>
             </article>    
         </div>
     </main>
+    <script></script>
 </body>
 </html>
