fix: bad character

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                 <pre class="code-wrapper-text">
 function solution(number){
     let summ = 0;
-    if(number <= 0){
+    if(number &#60;&#61; 0){
         return 0;
     }
-    for(let i = 0; i <= number - 1; ++i){
+    for(let i = 0; i &#60;&#61; number - 1; ++i){
         if(i % 3 == 0){
         summ = summ + i;
         }else if(i % 5 == 0){
